# mummymaze-rl

./: .gitignore  AGENT_WIN_PERCENT.md  CLAUDE.md  GAME_RULES.md  IDEAS.md  README.md  TRAINING_DESIGN.md  compare_parsers.py  compare_solvers.py  game_tables.json  main.py  markov_all.py  markov_results.csv  pyproject.toml  solve_all.py
.claude/plans/: task-4d-viewer-ws-client.md
config/: adversarial_default.py  bc_custom.py  bc_default.py
crates/: CLAUDE.md
crates/mummymaze/: Cargo.toml  pyproject.toml
crates/mummymaze-viewer/: Cargo.toml  TODO-simplify.md
crates/mummymaze-viewer/src/: adversarial.rs  adversarial_tab.rs  agent_probs.rs  data.rs  gameplay.rs  level_gen_tab.rs  main.rs  render.rs  table.rs  training_metrics.rs  training_process.rs  training_tab.rs  ws_client.rs
crates/mummymaze-viewer/src/data/: mod.rs  training.rs  types.rs
crates/mummymaze-viewer/src/graph_view/: build.rs  gpu.rs  interaction.rs  layout.rs  math.rs  mod.rs  shaders.rs  types.rs
crates/mummymaze/src/: batch.rs  error.rs  event_types.rs  ga.rs  game.rs  graph.rs  lib.rs  markov.rs  metrics.rs  model_server.rs  parse.rs  policy_client.rs  python.rs  solver.rs
crates/mummymaze/src/ga/: archive.rs  crossover.rs  fitness.rs  mod.rs  mutation.rs  random_level.rs
csolver/: CMakeLists.txt  visualize.py
csolver/src/: csim.c  game.c  game.h  main.c  parse.c  parse.h  solver.c  solver.h  trace.c
docs/: BINARY_ANALYSIS.md  GAME_RULES.md  IDEAS.md  REFACTOR_IDEAS.md  REFACTOR_PLAN.md  solutions.txt
experiments/: bc_vs_direct.py  curriculum_gs6.py
notebooks/: feature_analysis.ipynb  food_landscape_ga.ipynb  policy_analysis.ipynb  style_matching_ga.ipynb
src/: CLAUDE.md  example.py  game.py  markov.py  solver.py  tui.py
src/baselines/: random_agent.py
src/env/: env.py  level_bank.py  level_load.py  mechanics.py  obs.py  step.py  types.py
src/train/: __main__.py  adversarial.py  adversarial_loop.py  augment.py  callbacks.py  checkpoint.py  config.py  configurator.py  dataset.py  eval.py  ga.py  inference.py  loop.py  loss.py  markov_jax.py  model.py  model_server.py  optim.py  policy_server.py  reporter.py  session.py  stopping.py  train_bc.py  wire.py  ws_server.py
tests/: test_bc_dataset.py  test_jax_solutions.py  test_policy_win_prob.py  test_random_levels.py  test_solutions.py  test_step.py  test_vmap.py
