[package]
name = "mummymaze-viewer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mummymaze-viewer"
path = "src/main.rs"

[dependencies]
mummymaze = { path = "../mummymaze", default-features = false }
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
egui-wgpu = "0.31"
bytemuck = { version = "1", features = ["derive"] }
rustc-hash = "2"
rayon = "1.10"
egui_extras = { version = "0.31", features = ["default"] }
egui_plot = "0.31"
glam = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0.26"
glob = "0.3"
