[package]
name = "mummymaze"
version = "0.1.0"
edition = "2024"

[lib]
name = "mummymaze"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mummymaze-cli"
path = "src/bin/cli.rs"

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }
numpy = { version = "0.24", optional = true }
rand = "0.9"
rayon = "1.10"
thiserror = "2"
rustc-hash = "2"
fasteval = "0.2"
clap = { version = "4", features = ["derive"] }
csv = "1.3"
indicatif = "0.17"

[features]
default = ["python"]
python = ["pyo3", "numpy"]
